load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "apackage.go",
    ],
    importpath = "apackage",
    visibility = ["//visibility:public"],
    deps = [
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["apackage_test.go"],
    data = [
        "@kubebuilder_sdk//:bin/etcd",
    ],
    embed = [":go_default_library"],
    deps = [
    ],
)
